# JuniorMemSys-Suite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  __init__.py  docker-compose.yml  dockerfile  inject_v5.py  jms_audit_ledger.json  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: abc_memory_benchmark.py  abc_verification.py  benchmark_suite.py  longmen_eval.py  scaling_test.py
jcllc_mem_sys/: cli.py  config.py
jcllc_mem_sys/core/: knowledge_graph.py  palace.py  tda_mesh.py
junior_memsys_suite/: cli.py  config.py
junior_memsys_suite/core/: knowledge_graph.py  omni_math_fallback.py  palace.py  tda_mesh.py
pipelines/: batch_ingest.py  dataset_miner.py
playground/: app.py
scripts/: build_omni_kernel.py  sdk_harvester.py
src/hardware/: backend_router.py
src/manifolds/: ternary_spatial_manifold.py
src/recognition/: call_pattern_store.py
