[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "junior-memsys-suite"
version = "0.2.1"
description = "JuniorMemSys Suite — Topological Memory Palace via Bit Drift, TDA & Omni Math"
authors = [{ name = "JuniorCloud LLC", email = "lead@juniorcloud.ai" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0", "fastapi>=0.100.0", "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0", "pydantic-settings>=2.0.0", "numpy>=1.24.0",
    "scipy>=1.10.0", "networkx>=3.1", "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0", "mypy>=1.8.0", "pre-commit>=3.6.0", "streamlit>=1.31.0", "ipykernel>=6.0.0", "pandas>=2.0.0", "psutil>=5.9.0"]
playground = ["streamlit>=1.31.0", "pandas>=2.0.0", "psutil>=5.9.0"]
benchmarks = [
    "openai>=1.0.0", 
    "pandas>=2.0.0", "psutil>=5.9.0", 
    "groq>=0.4.2", 
    "requests"
]

[project.scripts]
junior-memsys = "junior_memsys_suite.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["junior_memsys_suite"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"